--- a/consultor_climatico/dashboard/templates/dashboard/login.html
+++ b/consultor_climatico/dashboard/templates/dashboard/login.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 {% block content %}
 <h2>Login</h2>
 <form method="post">
@@ -14,5 +8,3 @@
 </form>
 <a href="{% url 'registrar' %}">Criar uma conta</a>
 {% endblock %}
-</body>
-</html>
